kustomization/components/networkpolicy-allow-to-grafana/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-grafana-networkpolicy
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
      ports:
        - port: grafana
          protocol: TCP
  podSelector:
    matchLabels:
      hogs.tswn.us/grafana-client: "true"
  policyTypes:
    - Egress
